force-app/main/default/objects/ssot__MgdEventSessSubjectAssignment__dlm/fields/ssot__ManagedEventSessionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ManagedEventSessionId__c</fullName>
    <label>Managed Event Session Id</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ManagedEventSessionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>