force-app/main/default/objects/ssot__MgdEventSessSubjectAssignment__dlm/fields/ssot__SubjectAssignmentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SubjectAssignmentId__c</fullName>
    <label>Subject Assignment Id</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SubjectAssignmentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>